# bitflags

./: .gitignore  CMakeLists.txt  README.md
cmake/: ColorMessage.cmake
src/: bitflags.hpp  flags.cpp  flags.hpp  input.cpp  utils.hpp
